tests/run-make/const-trait-stable-toolchain/const-super-trait-stable-disabled.stderr
error: `[const]` is not allowed here
 --> const-super-trait.rs:7:12
  |
7 | trait Bar: [const] Foo {}
  |            ^^^^^^^
  |
note: this trait is not `const`, so it cannot have `[const]` trait bounds
 --> const-super-trait.rs:7:1
  |
7 | trait Bar: [const] Foo {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0658]: const trait impls are experimental
 --> const-super-trait.rs:7:12
  |
7 | trait Bar: [const] Foo {}
  |            ^^^^^^^
  |
  = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information

error[E0658]: const trait impls are experimental
 --> const-super-trait.rs:9:17
  |
9 | const fn foo<T: [const] Bar>(x: &T) {
  |                 ^^^^^^^
  |
  = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information

error: `[const]` can only be applied to `const` traits
 --> const-super-trait.rs:7:12
  |
7 | trait Bar: [const] Foo {}
  |            ^^^^^^^ can't be applied to `Foo`
  |
note: `Foo` can't be used with `[const]` because it isn't `const`
 --> const-super-trait.rs:3:1
  |
3 | trait Foo {
  | ^^^^^^^^^

error: `[const]` can only be applied to `const` traits
 --> const-super-trait.rs:9:17
  |
9 | const fn foo<T: [const] Bar>(x: &T) {
  |                 ^^^^^^^ can't be applied to `Bar`
  |
note: `Bar` can't be used with `[const]` because it isn't `const`
 --> const-super-trait.rs:7:1
  |
7 | trait Bar: [const] Foo {}
  | ^^^^^^^^^^^^^^^^^^^^^^

error[E0015]: cannot call non-const method `<T as Foo>::a` in constant functions
  --> const-super-trait.rs:10:7
   |
10 |     x.a();
   |       ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
